--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -2,22 +2,41 @@
 
 /* Demo css */
 
-html {color:#000;background:#fff;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}table{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}li{list-style:none;}caption,th{text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}q:before,q:after{content:'';}abbr,acronym {border:0;font-variant:normal;}sup {vertical-align:text-top;}sub {vertical-align:text-bottom;}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;}input,textarea,select{*font-size:100%;}legend{color:#000;}
-
-html { height:100%; }
+html {height:100%;font-size:12px;color:#000;background:#fff;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}table{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}li{list-style:none;}caption,th{text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}q:before,q:after{content:'';}abbr,acronym {border:0;font-variant:normal;}sup {vertical-align:text-top;}sub {vertical-align:text-bottom;}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;}input,textarea,select{*font-size:100%;}legend{color:#000;}
 
 body {
   @include linear-gradient(#999, #222);
   color:#f5f5f5;
   height:100%;
   font-family:arial;
+  font-size:1em;
 }
 
 a { color:#aaf; }
 
-.hasShadow { border:0; @include boxshadow(0 0 12px #000); }
+p { margin:0.6em 0; }
+
+h4 { font-size:1.4em; }
+
+.boxshadow.rgba .hasShadow { border:0; @include boxshadow(0 3px 12px rgba(0, 0, 0, 0.5)); }
 
 .pulser {
+  height:12px; width:12px;
+  position:absolute;
+}
+.pulser .inner {
+  height:16px; width:16px;
+  position:absolute;
+  left:0px; top:0px;
+  background:#fcfcfc;
+  color:#1ec016;
+  text-shadow:0 -1px 1px #ccc;
+  font-size:16px;
+  line-height:16px;
+  font-weight:bold;
+  text-align:center;
+}
+.pulser .outer {
   height: 12px;
   width: 12px;
   position: absolute;
@@ -25,8 +44,15 @@ a { color:#aaf; }
   top:0;
   border: 2px solid #50b6f4;
 }
-.borderradius .pulser { @include rounded(30px); }
-.cssanimations .pulser {
+.cssgradients .pulser .inner {
+  @include linear-gradient(#fafafa, #ddd);
+}
+.borderradius .pulser { 
+  &, 
+  .outer,
+  .inner { @include rounded(30px); } 
+}
+.cssanimations .pulser .outer {
   -webkit-animation: pulsate 1s ease-out;
   -webkit-animation-iteration-count: infinite; 
   -moz-animation: pulsate 1s ease-out;
@@ -46,6 +72,10 @@ a { color:#aaf; }
 
 
 .bubbletip,
-.bubbletipHide {
+.bubbletipHide,
+.bubbletipBlue,
+.bubbletipHideTrans {
+  cusor:pointer;
+  font-weight:bold;
   .info { display:none; }
 }
